# webcodecs-benchmark

./: .gitignore  README.md  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
app/: app.vue
app/assets/: main.css
app/components/: VideoPreviewModal.vue  video-preview-modal.vue
app/pages/: index.vue  webav.vue
app/utils/: download.ts  grayscale-clip.ts  grid-grayscale-clip.ts  webgl.ts
baseline/: main.py  pyproject.toml
types/: index.d.ts
