[project]
    authors = [{ name = "Bean", email = "dengbin@bilibili.com" }]
    dependencies = [
        "matplotlib (>=3.10.6,<4.0.0)",
        "opencv-python (>=4.12.0.88,<5.0.0.0)",
        "pillow (>=11.3.0,<12.0.0)",
        "av (>=15.1.0,<16.0.0)",
    ]
    description = ""
    name = "baseline"
    requires-python = ">=3.13"
    version = "0.1.0"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry]
    package-mode = false
